fixed image styling on mobile

--- a/public/bootstrap/less/trp3Chat.less
+++ b/public/bootstrap/less/trp3Chat.less
@@ -209,6 +209,8 @@
     border: 1px solid #e6ebe6;
     padding: 4px;
     background-color: white;
+    width: 180px;
+    height: 180px;
 
   }
   .notification-icon {
